# safe-api

./: CHANGELOG.md  Cargo.toml
safe-api/src/api/: common.rs  errors.rs  fake_scl.rs  safe_client_libs.rs
safe-api/src/api/app/: auth.rs  fake_scl.rs  helpers.rs  keys.rs  safe_client_libs.rs  safe_net.rs  wallet.rs
safe-api/src/api/authenticator/: auth.rs
safe-cli/: Cargo.toml
safe-cli/benches/: keys.rs  put.rs  wallet.rs
safe-cli/operations/: auth_daemon.rs
safe-cli/subcommands/: auth.rs
safe-cli/tests/common/: mod.rs
safe-cmd-test-utilities/src/: lib.rs
safe-ffi/: Cargo.toml
