[workspace]
members = ["safe-cli", "safe-api", "safe-ffi", "safe-authd", "jsonrpc-quic"]

[patch.crates-io]
# safe-nd =  { git = "https://github.com/oetyng/safe-nd.git", rev = "1a14742a17ffd9098f0fba85f88819515c486214" }
safe-nd =  { path = "../safe-nd"  }
safe_core =  { path = "../scl/safe_core" }
safe_app =  { path = "../scl/safe_app" }
safe_authenticator =  { path = "../scl/safe_authenticator" }

